Aggiunta gestione admin, merchant e booking