@@ -2,6 +2,7 @@ package it.smartmall.controller;
 
 import it.smartmall.dto.StoreDTO;
 import it.smartmall.model.Store;
+import it.smartmall.model.StoreStatus;
 import it.smartmall.repository.StoreRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -9,9 +10,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/stores")
@@ -23,28 +22,16 @@ public class StoreController {
     @GetMapping
     public ResponseEntity<List<StoreDTO>> getAllStores() {
 
-        List<Store> stores = storeRepository.findAll();
+        List<Store> stores = storeRepository.findByStatus(StoreStatus.ACTIVE);
 
-        // lista di Store convertita in una lista di StoreDTO
         List<StoreDTO> storeDTOs = stores.stream().map(store -> {
             StoreDTO dto = new StoreDTO();
             dto.setId(store.getId());
             dto.setName(store.getName());
-
-            // Logica per capire se è sospeso in questo momento
-            LocalDateTime now = LocalDateTime.now();
-            boolean suspended = store.getSuspendedFrom() != null &&
-                    store.getSuspendedTo() != null &&
-                    now.isAfter(store.getSuspendedFrom()) &&
-                    now.isBefore(store.getSuspendedTo());
-
-            dto.setSuspended(suspended);
-            if (suspended) {
-                dto.setSuspendedReason(store.getSuspendedReason());
-            }
-
+            dto.setStatus(store.getStatus().name());
+            dto.setSuspendedReason(store.getSuspendedReason());
             return dto;
-        }).collect(Collectors.toList());
+        }).toList();
 
         return ResponseEntity.ok(storeDTOs);
     }
